--- a/views/layout.haml
+++ b/views/layout.haml
@@ -4,7 +4,6 @@
 %html
   %head
     %meta{name:'viewport', content:'width=device-width, initial-scale=1'}
-    %title
-      - title || 'ENVY'
+    %title #{title || 'ENVY'}
   %body
     = yield
