--- a/public/main.css
+++ b/public/main.css
@@ -3,14 +3,65 @@
   margin: 0;
 }
 
-form {
-  position: absolute;
-  top: 50%;
-  margin-top: 10px;
-  width: 100%;
-  text-align: center;
+body {
+  background-color: #f5f6fa;
+  color: #666;
+  letter-spacing: 0.05em;
 }
 
-form input {
-  padding: 20px;
+section {
+  margin: 50px 50px 0;
+}
+
+section h1 {
+  text-align: center;
+  margin-bottom: 25px;
+  font-size: 30px;
+  font-weight: normal;
+}
+
+section p {
+  font-size: 14px;
+  margin-bottom: 10px;
+}
+
+section dl {
+  background-color: #d9edf7;
+  color: #31708f;
+  border: 1px solid #b3e5ef;
+  border-radius: 3px;
+  padding: 15px;
+  margin-bottom: 20px;
+}
+
+section dl dt {
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+section dl dd {
+  font-size: 14px;
+}
+
+section dl dd ul {
+  margin-left: 1.5em;
+}
+
+form .submitButton {
+  display: block;
+  width: 300px;
+  margin: 0 auto;
+
+  -webkit-appearance: none;
+  appearance: none;
+
+  background-color: #43D0D7;
+  color: #fff;
+
+  border: 1px solid rgb(67, 208, 215);
+  border-radius: 3px;
+  padding: 10px;
+
+  font-size: 18px;
 }
