public/main.js -> public/javascript/main.js

--- a/views/index.haml
+++ b/views/index.haml
@@ -20,4 +20,4 @@
     %input{type: 'text', id: 'js-values-field', name: 'jsenv', value: '', hidden: true}
     %input{class: 'submitButton', type: 'submit', id: 'submit-button', value: '情報を送信する'}
 
-  %script{type: 'text/javascript', src: "main.js?t=#{Time.now.to_i}"}
+  %script{type: 'text/javascript', src: "javascript/main.js?t=#{Time.now.to_i}"}
