font-awesome のアイコンを追加

--- a/views/index.haml
+++ b/views/index.haml
@@ -18,6 +18,8 @@
 
   %form{action: '/', method: 'post'}
     %input{type: 'text', id: 'js-values-field', name: 'jsenv', value: '', hidden: true}
-    %input{class: 'submitButton', type: 'submit', id: 'submit-button', value: '情報を送信する'}
+    %button{class: 'submitButton', type: 'submit', id: 'submit-button'}
+      %i.fa.fa-fw.fa-paper-plane-o
+      情報を送信する
 
   %script{type: 'text/javascript', src: "javascript/main.js?t=#{Time.now.to_i}"}
