--- a/views/layout.haml
+++ b/views/layout.haml
@@ -5,6 +5,7 @@
   %head
     %meta{name:'viewport', content:'width=device-width, initial-scale=1'}
     %title #{title || 'ENVY'}
+    %link{href: "https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css", rel: "stylesheet", integrity: "sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN", crossorigin: "anonymous"}
     %link{rel: 'stylesheet', media: 'all', href: 'css/main.css'}
   %body
     = yield
