--- a/views/thanks.haml
+++ b/views/thanks.haml
@@ -1,7 +1,5 @@
-%h2 Thanks
-%p
-  Your inquiry token is
-  %b
-    = @inquiry_token
-  %br
-  Please notify it to our staff or administrator.
+%section
+  %h1 デバイス情報調査
+
+  %div
+    ご協力ありがとうございました。
