--- a/public/css/main.css
+++ b/public/css/main.css
@@ -25,7 +25,7 @@ section p {
   margin-bottom: 10px;
 }
 
-section dl {
+.notification {
   background-color: #d9edf7;
   color: #31708f;
   border: 1px solid #b3e5ef;
