--- a/views/layout.haml
+++ b/views/layout.haml
@@ -5,6 +5,6 @@
   %head
     %meta{name:'viewport', content:'width=device-width, initial-scale=1'}
     %title #{title || 'ENVY'}
-    %link{rel: 'stylesheet', media: 'all', href: 'main.css'}
+    %link{rel: 'stylesheet', media: 'all', href: 'css/main.css'}
   %body
     = yield
