お客さま -> お客様

--- a/views/index.haml
+++ b/views/index.haml
@@ -9,7 +9,7 @@
     つきましては、下記の「送信」ボタンの押下をお願い致します。
 
   %dl.notification
-    %dt 弊社が取得するお客さまの情報
+    %dt 弊社が取得するお客様の情報
     %dd
       %ul
         %li 利用端末の情報
