--- a/public/css/main.css
+++ b/public/css/main.css
@@ -34,7 +34,7 @@ section p {
   border: 1px solid #b3e5ef;
   border-radius: 3px;
   padding: 15px;
-  margin-bottom: 20px;
+  margin: 30px 0;
   font-size: 14px;
 }
 
